Fix partial keys when converting VARCHAR to TEXT. (Bug #10543)